WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186982
Fix the DUMP_NODE_STATISTICS code so that it compiles
https://bugs.webkit.org/show_bug.cgi?id=186982
Summary
Fix the DUMP_NODE_STATISTICS code so that it compiles
Simon Fraser (smfr)
Reported
2018-06-24 16:00:03 PDT
Fix the DUMP_NODE_STATISTICS code so that it compiles
Attachments
Patch
(3.74 KB, patch)
2018-06-24 16:01 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2018-06-24 16:01:18 PDT
Created
attachment 343470
[details]
Patch
Anders Carlsson
Comment 2
2018-06-24 20:51:51 PDT
Comment on
attachment 343470
[details]
Patch Is there any point in counting nodes anyway?
Simon Fraser (smfr)
Comment 3
2018-06-24 21:15:15 PDT
Yeah I've used this s couple of times recently.
WebKit Commit Bot
Comment 4
2018-06-24 21:40:28 PDT
Comment on
attachment 343470
[details]
Patch Clearing flags on attachment: 343470 Committed
r233136
: <
https://trac.webkit.org/changeset/233136
>
WebKit Commit Bot
Comment 5
2018-06-24 21:40:29 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-06-24 21:41:16 PDT
<
rdar://problem/41414497
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug