Fix the DUMP_NODE_STATISTICS code so that it compiles https://bugs.webkit.org/show_bug.cgi?id=186982

Reviewed by Anders Carlsson.

The DUMP_NODE_STATISTICS code had bitrotted. ENTITY_NODE no longer exists.
liveNodeSet needs to be a static function with a NeverDestroyed<>.

* dom/Node.cpp:
(WebCore::Node::dumpStatistics):
(WebCore::Node::trackForDebugging):
(WebCore::Node::~Node):


Canonical link: https://commits.webkit.org/202227@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233136 268f45cc-cd09-0410-ab3c-d52691b4dbfc